sqllistmodel: standart items support added

--- a/ui/listview_dialog.ui
+++ b/ui/listview_dialog.ui
@@ -23,7 +23,10 @@
       </sizepolicy>
      </property>
      <property name="editTriggers">
-      <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="showDropIndicator" stdset="0">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
