docs view in progress

--- a/resources.qrc
+++ b/resources.qrc
@@ -5,6 +5,9 @@
         <file>icons/church-48.png</file>
     	<file>icons/clear-filter-16.png</file>
     	<file>icons/delete-16.png</file>
+        <file>icons/delete-20.png</file>
+        <file>icons/doc-edit-20.png</file>
+        <file>icons/doc-new-20.png</file>
         <file>icons/docs-folder-16.png</file>
         <file>icons/exit-16.png</file>
         <file>icons/folder-16.png</file>
