doc crud in progress

--- a/resources.qrc
+++ b/resources.qrc
@@ -4,14 +4,20 @@
         <file>icons/church-24.png</file>
         <file>icons/church-48.png</file>
     	<file>icons/clear-filter-16.png</file>
+        <file>icons/dbsettings-16.png</file>
     	<file>icons/delete-16.png</file>
         <file>icons/delete-20.png</file>
         <file>icons/doc-edit-20.png</file>
         <file>icons/doc-new-20.png</file>
-        <file>icons/docs-folder-16.png</file>
+        <file>icons/doc-folder-16.png</file>
+        <file>icons/doctype-16.png</file>
         <file>icons/exit-16.png</file>
+        <file>icons/flag-16.png</file>
         <file>icons/folder-16.png</file>
         <file>icons/folder-new-16.png</file>
+        <file>icons/info-16.png</file>
+        <file>icons/minus-16.png</file>
+        <file>icons/plus-16.png</file>
         <file>icons/rename-16.png</file>
         <file>icons/search-file-16.png</file>
         <file>icons/sort19-16.png</file>
