--- a/ui/docform_dialog.ui
+++ b/ui/docform_dialog.ui
@@ -260,9 +260,6 @@
        <string>Дополнительно</string>
       </attribute>
       <layout class="QFormLayout" name="formLayout">
-       <item row="1" column="1">
-        <widget class="QTextEdit" name="comment_textEdit"/>
-       </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_8">
          <property name="text">
@@ -280,6 +277,9 @@
        <item row="0" column="1">
         <widget class="QListView" name="docflag_listView"/>
        </item>
+       <item row="1" column="1">
+        <widget class="QPlainTextEdit" name="comment_textEdit"/>
+       </item>
       </layout>
      </widget>
     </widget>
@@ -290,7 +290,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::Save</set>
      </property>
     </widget>
    </item>
