--- a/ui/docform_dialog.ui
+++ b/ui/docform_dialog.ui
@@ -209,7 +209,7 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="yearInsert_pushButton">
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
@@ -229,7 +229,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_2">
+             <widget class="QPushButton" name="yearRemove_pushButton">
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
@@ -275,7 +275,14 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QListView" name="docflag_listView"/>
+        <widget class="QListView" name="docflag_listView">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+         <property name="showDropIndicator" stdset="0">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="1" column="1">
         <widget class="QPlainTextEdit" name="comment_textEdit"/>
