--- a/ui/docform_dialog.ui
+++ b/ui/docform_dialog.ui
@@ -41,12 +41,32 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QTextEdit" name="textEdit">
+        <widget class="QTextEdit" name="locality_textEdit">
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>50</height>
+           <height>100</height>
           </size>
+         </property>
+         <property name="font">
+          <font>
+           <kerning>true</kerning>
+          </font>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>ArrowCursor</cursorShape>
+         </property>
+         <property name="toolTip">
+          <string>Местоположениее документа</string>
+         </property>
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color:#333333</string>
+         </property>
+         <property name="undoRedoEnabled">
+          <bool>false</bool>
          </property>
          <property name="readOnly">
           <bool>true</bool>
@@ -144,6 +164,15 @@
            <width>100</width>
            <height>16777215</height>
           </size>
+         </property>
+         <property name="suffix">
+          <string/>
+         </property>
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>2500</number>
          </property>
         </widget>
        </item>
@@ -306,22 +335,5 @@
  <resources>
   <include location="../resources.qrc"/>
  </resources>
- <connections>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>286</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
