--- a/ui/docform_dialog.ui
+++ b/ui/docform_dialog.ui
@@ -31,7 +31,7 @@
      <property name="tabsClosable">
       <bool>false</bool>
      </property>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="tab_main">
       <attribute name="title">
        <string>Основные сведения</string>
       </attribute>
@@ -287,7 +287,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab_2">
+     <widget class="QWidget" name="tab_add">
       <attribute name="title">
        <string>Дополнительно</string>
       </attribute>
