--- a/ui/search_dialog.ui
+++ b/ui/search_dialog.ui
@@ -56,7 +56,7 @@
          <enum>QTabWidget::Rounded</enum>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <property name="documentMode">
          <bool>true</bool>
@@ -335,7 +335,7 @@
              <item>
               <widget class="QCheckBox" name="checkBox_flaghard">
                <property name="text">
-                <string>Только полное соответствие</string>
+                <string>Строгий поиск</string>
                </property>
               </widget>
              </item>
