--- a/ui/search_dialog.ui
+++ b/ui/search_dialog.ui
@@ -387,7 +387,21 @@
     </widget>
    </item>
    <item>
-    <widget class="QTreeView" name="treeView_docs"/>
+    <widget class="QTreeView" name="treeView_docs">
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_status">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
