--- a/ui/docform_dialog.ui
+++ b/ui/docform_dialog.ui
@@ -76,14 +76,14 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>Тип документа</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="QComboBox" name="doctype_comboBox">
          <property name="maximumSize">
           <size>
@@ -91,16 +91,19 @@
            <height>16777215</height>
           </size>
          </property>
+         <property name="editable">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="4" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>Фонд</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="4" column="1">
         <widget class="QLineEdit" name="fund_lineEdit">
          <property name="maximumSize">
           <size>
@@ -113,14 +116,14 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="5" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>Опись</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="5" column="1">
         <widget class="QLineEdit" name="inventory_lineEdit">
          <property name="maximumSize">
           <size>
@@ -133,14 +136,14 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="6" column="0">
         <widget class="QLabel" name="label_5">
          <property name="text">
           <string>Дело</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
+       <item row="6" column="1">
         <widget class="QLineEdit" name="unit_lineEdit">
          <property name="maximumSize">
           <size>
@@ -153,14 +156,14 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
+       <item row="7" column="0">
         <widget class="QLabel" name="label_6">
          <property name="text">
           <string>Количество листов</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="7" column="1">
         <widget class="QSpinBox" name="sheet_spinBox">
          <property name="maximumSize">
           <size>
@@ -179,14 +182,14 @@
          </property>
         </widget>
        </item>
-       <item row="8" column="0">
+       <item row="10" column="0">
         <widget class="QLabel" name="label_11">
          <property name="text">
           <string>Годы документов</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="1">
+       <item row="10" column="1">
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
           <widget class="QListView" name="year_listView">
@@ -290,6 +293,9 @@
           </widget>
          </item>
         </layout>
+       </item>
+       <item row="3" column="1">
+        <widget class="QComboBox" name="comboBox_fund"/>
        </item>
       </layout>
      </widget>
