refactoring, listview dialog refactoring in progress

--- a/resources.qrc
+++ b/resources.qrc
@@ -16,6 +16,7 @@
         <file>icons/folder-new-16.png</file>
         <file>icons/info-16.png</file>
         <file>icons/minus-16.png</file>
+        <file>icons/open-16.png</file>
         <file>icons/plus-16.png</file>
         <file>icons/refresh-16.png</file>
         <file>icons/rename-16.png</file>
