--- a/ui/search_dialog.ui
+++ b/ui/search_dialog.ui
@@ -85,13 +85,34 @@
             </property>
             <layout class="QFormLayout" name="formLayout">
              <item row="0" column="0">
+              <widget class="QLabel" name="label_4">
+               <property name="font">
+                <font>
+                 <weight>75</weight>
+                 <italic>false</italic>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="text">
+                <string>Название церкви</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QLineEdit" name="lineEdit_church">
+               <property name="clearButtonEnabled">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
               <widget class="QLabel" name="label">
                <property name="text">
                 <string>Губерния</string>
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
+             <item row="1" column="1">
               <widget class="QComboBox" name="comboBox_gubernia">
                <property name="currentText">
                 <string/>
@@ -101,21 +122,21 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
+             <item row="2" column="0">
               <widget class="QLabel" name="label_2">
                <property name="text">
                 <string>Название уезда</string>
                </property>
               </widget>
              </item>
-             <item row="1" column="1">
+             <item row="2" column="1">
               <widget class="QLineEdit" name="lineEdit_uezd">
                <property name="clearButtonEnabled">
                 <bool>true</bool>
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
+             <item row="3" column="0">
               <widget class="QLabel" name="label_3">
                <property name="inputMethodHints">
                 <set>Qt::ImhMultiLine</set>
@@ -125,22 +146,8 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="1">
-              <widget class="QLineEdit" name="lineEdit_locality">
-               <property name="clearButtonEnabled">
-                <bool>true</bool>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="0">
-              <widget class="QLabel" name="label_4">
-               <property name="text">
-                <string>Название церкви</string>
-               </property>
-              </widget>
-             </item>
              <item row="3" column="1">
-              <widget class="QLineEdit" name="lineEdit_church">
+              <widget class="QLineEdit" name="lineEdit_locality">
                <property name="clearButtonEnabled">
                 <bool>true</bool>
                </property>
@@ -184,21 +191,14 @@
              <item row="1" column="0">
               <widget class="QLabel" name="label_6">
                <property name="text">
-                <string>Фонд №</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
-              <widget class="QLineEdit" name="lineEdit_fund">
-               <property name="clearButtonEnabled">
-                <bool>true</bool>
+                <string>Фонд</string>
                </property>
               </widget>
              </item>
              <item row="2" column="0">
               <widget class="QLabel" name="label_7">
                <property name="text">
-                <string>Опись №</string>
+                <string>Опись</string>
                </property>
               </widget>
              </item>
@@ -212,7 +212,7 @@
              <item row="3" column="0">
               <widget class="QLabel" name="label_8">
                <property name="text">
-                <string>Дело №</string>
+                <string>Дело</string>
                </property>
               </widget>
              </item>
@@ -242,13 +242,19 @@
                <item>
                 <widget class="QLineEdit" name="lineEdit_year_from">
                  <property name="inputMethodHints">
-                  <set>Qt::ImhNone</set>
+                  <set>Qt::ImhDigitsOnly</set>
                  </property>
                  <property name="inputMask">
-                  <string>9999</string>
+                  <string/>
+                 </property>
+                 <property name="text">
+                  <string/>
+                 </property>
+                 <property name="cursorPosition">
+                  <number>0</number>
                  </property>
                  <property name="cursorMoveStyle">
-                  <enum>Qt::LogicalMoveStyle</enum>
+                  <enum>Qt::VisualMoveStyle</enum>
                  </property>
                  <property name="clearButtonEnabled">
                   <bool>true</bool>
@@ -268,7 +274,7 @@
                   <set>Qt::ImhNone</set>
                  </property>
                  <property name="inputMask">
-                  <string>9999</string>
+                  <string/>
                  </property>
                  <property name="frame">
                   <bool>true</bool>
@@ -292,6 +298,9 @@
              </item>
              <item row="5" column="1">
               <widget class="QLineEdit" name="lineEdit_comment"/>
+             </item>
+             <item row="1" column="1">
+              <widget class="QComboBox" name="comboBox_fund"/>
              </item>
             </layout>
            </widget>
