--- a/ui/docform_dialog.ui
+++ b/ui/docform_dialog.ui
@@ -79,7 +79,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Тип документа</string>
+          <string>Вид документа</string>
          </property>
         </widget>
        </item>
@@ -349,7 +349,7 @@
        <item row="0" column="0">
         <widget class="QLabel" name="label_7">
          <property name="text">
-          <string>Флаги</string>
+          <string>Метки (прим.)</string>
          </property>
         </widget>
        </item>
