--- a/ui/listview_dialog.ui
+++ b/ui/listview_dialog.ui
@@ -26,7 +26,7 @@
       </sizepolicy>
      </property>
      <property name="editTriggers">
-      <set>QAbstractItemView::EditKeyPressed</set>
+      <set>QAbstractItemView::NoEditTriggers</set>
      </property>
      <property name="showDropIndicator" stdset="0">
       <bool>false</bool>
@@ -38,7 +38,7 @@
      <item>
       <widget class="QPushButton" name="pushButton_create">
        <property name="text">
-        <string>Добавить</string>
+        <string>Новый</string>
        </property>
       </widget>
      </item>
