--- a/ui/docform_dialog.ui
+++ b/ui/docform_dialog.ui
@@ -144,6 +144,9 @@
             <property name="title">
              <string>Сведения о документе</string>
             </property>
+            <property name="flat">
+             <bool>false</bool>
+            </property>
             <layout class="QFormLayout" name="formLayout_3">
              <item row="0" column="0">
               <widget class="QLabel" name="label_2">
