search dialog holds window size in qsettings

--- a/ui/search_dialog.ui
+++ b/ui/search_dialog.ui
@@ -16,6 +16,12 @@
   <property name="windowTitle">
    <string>Поиск документов</string>
   </property>
+  <property name="sizeGripEnabled">
+   <bool>true</bool>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
     <number>0</number>
